# ChangeLog for dev-lang/nasm
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/nasm/ChangeLog,v 1.112 2014/01/17 18:22:21 mr_bones_ Exp $

*nasm-2.11 (17 Jan 2014)

  17 Jan 2014; Michael Sterrett <mr_bones_@gentoo.org> +nasm-2.11.ebuild:
  version bump

*nasm-2.10.09 (15 Dec 2013)

  15 Dec 2013; Michael Sterrett <mr_bones_@gentoo.org> +nasm-2.10.09.ebuild:
  version bump

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> nasm-2.10.07.ebuild:
  Stable for x86, wrt bug #457116

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> nasm-2.10.07.ebuild:
  Stable for amd64, wrt bug #457116

  22 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org> -nasm-2.10.01.ebuild:
  old

  11 Jan 2013; Rick Farina <zerochaos@gentoo.org> nasm-2.10.05.ebuild,
  nasm-2.10.07.ebuild:
  backpeddling arm keyword because even though it works fine everyone thinks
  it's not needed and it's too late for me to test right now

  11 Jan 2013; Rick Farina <zerochaos@gentoo.org> nasm-2.10.05.ebuild,
  nasm-2.10.07.ebuild:
  not sure why -* is there, seems to work fine on arm, adding keyword

*nasm-2.10.07 (02 Jan 2013)

  02 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org> +nasm-2.10.07.ebuild:
  version bump

  31 Dec 2012; Michael Sterrett <mr_bones_@gentoo.org> -nasm-2.10.06.ebuild:
  punt buggy version (bug #448630)

*nasm-2.10.06 (20 Dec 2012)

  20 Dec 2012; Michael Sterrett <mr_bones_@gentoo.org> +nasm-2.10.06.ebuild:
  version bump (bug #447982)

  30 Oct 2012; Agostino Sarubbo <ago@gentoo.org> nasm-2.10.05.ebuild:
  Stable for amd64, wrt bug #440152

  29 Oct 2012; Jeff Horelick <jdhore@gentoo.org> nasm-2.10.05.ebuild:
  marked x86 per bug 440152

  17 Oct 2012; Michael Sterrett <mr_bones_@gentoo.org> -nasm-2.09.10.ebuild,
  -nasm-2.10.04.ebuild, -nasm-2.10.ebuild:
  old

*nasm-2.10.05 (25 Sep 2012)

  25 Sep 2012; Michael Sterrett <mr_bones_@gentoo.org> +nasm-2.10.05.ebuild:
  version bump

*nasm-2.10.04 (06 Sep 2012)
