@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST nasm-2.10.05.tar.bz2 814524 SHA256 de5af263ce344d3a89711c61802e3ad8a4e14a61d539f521f7554cdbbe04ed0f SHA512 0a0a8752dcea6b1d205c265f72d7bbd56c90f8ea1438af3839696d21523cda7ac98441ad148c3ca0f0f3b18d83c989213d6e4366cf479b300749879e0c0fcbf0 WHIRLPOOL 1c9e19dccb9c5d5484ccc5a664dc4b5532d7cc1f80b3551ad06b1e6cf796ce845a075f678240a95c171e96321dd4bea0deb35af856ea48f8546d37760ea00da8
 DIST nasm-2.10.07.tar.xz 680892 SHA256 d08ca2c0a9d141c0d279774e933e24bcc01dbb6dc20416ad8d9672a08019376f SHA512 400504dd0ed9131112d5d38ca8cad2f7070fed98f3fd2cb32600ebe784e645532f98a9ac80ed4a5656b5a975a6af5db350954eb407e2a97b475dc57cf8f20a4f WHIRLPOOL 1b19931fd482b703d746df2a8b630f99e3aea18916995eee9427110118bf10bf6892855eabdf1c2d9bbac32a289169b942d85a0b3492841409f1b09c65ef1659
 DIST nasm-2.10.09.tar.xz 686416 SHA256 9ffd9f910c783ee798cf2986cec01ebeeb01ba0ecacef64d2d4bea927c41fbf2 SHA512 089216f84f2d202c65d8223f5e66423995f96c2feebb0b8c6380761d36739a1a0f9cd2c4102bffd09646f12fd152da562c9be9e1ec2d62619dc78ed2012a0208 WHIRLPOOL fe9283153352069fbdd832481b675be7d5bd4cef9662b4cc863dd00993032c586cecdccae863a0105c5e1b851b0a4cf1a389f038012214c423ad019457987eb9
@@ -5,6 +8,23 @@ DIST nasm-2.11.tar.xz 743396 SHA256 2448fab5a96ed63aa1e880d9e910e3df107e9d3898a8
 EBUILD nasm-2.10.05.ebuild 986 SHA256 effeb2deaa403fdd0ce9517718d979928ae4cac8c5afefb3ea8a0e58b7893b89 SHA512 21f84ef88f83263a6067746851b5b1276ac45ed857c267dec670a500fc0f40c7fb56950bdcc802d66292102d4ea57448769192a68cface4efffafe96f5edb3b7 WHIRLPOOL 3b970c1ac1ce86e830a81828e3ec94a4879f962320c2a9f7d21a2c7cb097456a986e7a1fccbc61e57ceca70e84394750fa7599ab2f057a84b8eb1910e3e2ec70
 EBUILD nasm-2.10.07.ebuild 938 SHA256 44969c1a5652f14bcdac0da3e036af66ad060d7933ba4e6943f5f9099c36d5b3 SHA512 d6a5bdcbb155ab46d184246a64ce590c636571160c20ac18ed728a8b7cfd633ef881b74b9ef7ac287c24836c12d76e2f9ecff6744232b32e239e70c392b4494b WHIRLPOOL d22b495cde90686cf394dc3086266cf2328df5a6c5c8e2b3dc0c84d1289041a0684f01fa040a967bd352958ad23fdd8008b51780a8dc7cdda294b6f13f471962
 EBUILD nasm-2.10.09.ebuild 946 SHA256 5e973b0c9f590656586148b7b10fbce09c58ca60e279638efb43e0b73944648f SHA512 4bfd2c09601d351832ee1a565db2e4bc964bc3278160a7ccf6aac782c2bae8e0b856ce84d027369b813baa8f195f3c687973ffefa5d8b19862cee96a773034bb WHIRLPOOL 79064853ffbae83540fd7febc567f70c4f8701ea9f1520a472d4c8a41c2de15cb5724bc7cf68c938657d29e58059fdc4f7fba81c28adf17f9746845157ace9d0
-EBUILD nasm-2.11.ebuild 943 SHA256 91a9cb7300550c141eb58e3287f89fb530b600bd1d5b84a5cdc57e2679adb314 SHA512 57d84bb055d4a3dafa3c931180a1630adf101e751a01a6afdc5bd2885ec7d6fee2c0a5afd975e278cf79bcb80ca69377bd0d1e84b533ac57c7def7991fa32aab WHIRLPOOL 3cb8d28bb70ec355320fea17ca4f831ee9652f41ef62030b1dcff611e00ac9946c50222ad5062d8eaf8eec03c65b32a52a411712999f42d843427f1e67d08e73
-MISC ChangeLog 14601 SHA256 8aaead216e0da0e7c3a623cd8fd472885f94360df90f18b986f0b24560b738d7 SHA512 bf99f9493dbc397477943862af15b724ce9c8c4de3fa26c9492531d513657624d5cb7019b5a5c14595aacbb0ff630d6e6838b691f905a3a841741f9c24d685c0 WHIRLPOOL b78db08bb9fbee55fe00990a3263659cacabd12644a2ad76e31ae463f1c9492cf527b766d1cc23595601241aa9ec0be4f706227eada4936078bc38e6a8051e50
+EBUILD nasm-2.11.ebuild 943 SHA256 ef3ff334eb09b222b4a0003584e72165cef3d504d9f245eb7f3891f066f1a2b0 SHA512 4241cfea9729626d40fea3b9a1d54133f9e3a4783abe70524632a43a14cdf8e91f0ef68c7ec470a20591b471e29d808ff5ec38ba4ebad2cd89497c0ce3ce2939 WHIRLPOOL 5ca46ea75e61973505d6037dd2e9bde0cecbe4e3a891037590d39d0aaa250e760b1344480260cecd35e4cf8a6bd1f366ea632dae487591d53195e32bfede57c7
+MISC ChangeLog 14773 SHA256 5a60058a0fdba3c1805c49306ad6f8716a4d2fc4d961a2fe3bfe96e40e198fe7 SHA512 7e2388f6f535d4257f147e5ceb2a54a9cf9f0fcae1ceca3132c6b3e70c8b57f0f9e52f075d760cfcd8774946de2a9ae52325ac3f6c0d3a11243d43d30cf3d9f8 WHIRLPOOL 4e1e9dd552b9287c95f26746d2a2633da2c8577d8d1bfa677ee743bb03fdd4c7e8478809b4f83f73836e9d0ebdea16df9bea904286f0a6bb0fdfaaccd508d1c0
 MISC metadata.xml 717 SHA256 9a51345c9db71eaeb3718651d3f322e3bd3667a5a3d8f18226f23a08cadded1b SHA512 53083a91bdc93a5c7e51944d4e2f47b4f9014b06134d3fd39cb399d7f26762a9f926156aa22f5b1dfec769b27e5cef5ed1f1c770678e0bfd2246981bb622c6d1 WHIRLPOOL fa7f2120edcb8a46fcfab92bff384f8a44f63f023f88584058b2af8ae27a205724e68661d08c328149efb6923971352a2cc4286dbf95106bda198e764c04ef87
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQIcBAEBCAAGBQJS6siUAAoJEPGu1DbS6WIAjfEP/iYrZgAr4hmJrJmjvMchE2kW
+RsngHK7RL69YNOzByZWX5RdXmFYdUVm9j2YMTl+48VXezSgdLXkN1Gu9BLcr48KG
+Kui0gK1u9HOjv3bqXjFL4v78iTr1zHcPkZi3/1jKxL6P7iY0cHyH7LBW1ezQ2E6Q
+3SPpPQdAIx7WDRiuvEhWiJjFDucNn51H9oxY116LMugPnl17QAqqNya7E9aP9iL4
+qY26H89taokIHzwgwqH77be8nUnY/WZtxDTIRucxvujeFEHPQ1oN0YxtvXafO+RM
+miE3rkx7J6hrDfyqPRhppTH2Jp3NhLGKeKEroi5/tMg/FKxSQNiz8YXfMbkDVIMQ
+z09E5pXZTLHS120gRXR+Z5n7EwHSsvIcKMCW7cwVJSjlMGzxoKOavutdxlmXSf9R
+A9UcorkhuBIuLSgj8Ob1WMqwWpJnDXa5zaBdQE7tcdofFvuaX9QTNRhSyVWgGima
+FX6ptpu/qpefpuu8cu6MbSRsce5wMU2f8lXHFjQVKwgwkLQipOvKZZtvNkfqxjh+
+N3mH0fJ24xUeghWvJAkY/4CRTmsXIb/uuLiKFvl1Whz0UOX2m9Dx8Iilqi0W++hD
+phv0F85NtEwc1ptRkjjjmID/Nt7zWF65RMzJ4dm2cQ898XyBTmtvFRsXsvJzHVsO
+NgOJuVIvkSU5AuP5hCbv
+=FQxn
+-----END PGP SIGNATURE-----
