@@ -1,5 +1,21 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX LuaBitOp-ldflags.patch 376 SHA256 443598aa1e11576681ec69c5e9eaf85d7bbc767ccaa67306b6d7669e95392bc9 SHA512 14b779c738dff2413d3b658c6861de02afd4cf577e7fd95b72af4d58240ed406d9727e1fb47d2ccce4d783fd2aeb576770790c85625935723da15d5c18a486c1 WHIRLPOOL c373f1f01f07e8783ef1b6823042ffb71dadd234fa487a332d7d46e06053399dcab5e020e1c8afe2bfb963a168788137b5d82e9344ebbd6e69ad47aed0bc93d5
 DIST LuaBitOp-1.0.1.tar.gz 22984 SHA256 6afa9984411079a7e109977bc8a28d63890c1489a928b1f61d33ef327e9cb0c9 SHA512 de326ba899b70ea01c41b02d26b1a5afd07bdeee5628be7cbeaa438452ac4343cab01494ac3e5e6758365de15c5cb9c211e17f2e4dd1e0e9258979d06018c71e WHIRLPOOL 166203b5306df2b85ce757fe697f7fa9c4ce185f6d0f8cb2491526b874385d7280c9a91b5d45bada76b28d9e7ca0c7881a97965c646f3c09683e8bc37dcc2998
+DIST LuaBitOp-1.0.2.tar.gz 23127 SHA256 1207c9293dcd52eb9dca6538d1b87352bd510f4e760938f5048433f7f272ce99 SHA512 a652050ea5c6fbeb8a28b05e2bc4a3550c854cc45f7f42c8c1b0a81f5b76773cdf061e6a839cdb339614118169e578b6e3efa5a3efbe59a2f01874b2fa2b4f2e WHIRLPOOL 1c9081e805f0c31dc806e3966d6d2639b3b4f0ff8d81850a78633581c8c975b52caefab80d50985093ed891de1fdefaed0a96c0ab985b23c73fa1e60a873385c
 EBUILD LuaBitOp-1.0.1-r1.ebuild 857 SHA256 72a381160fedb0d9edd7c8481adc8993ed314c69e7bc5cf5c844db38007f7ea1 SHA512 6582bd6c0c87adf0fa76de6e4c57ee5c63ab99c276e5aadb4e01f45e423ea2b0e8eadd2980d841ccd2427c3e4decc47a1c81aa5dc60d47678338922dbc7a78bc WHIRLPOOL 7d286de1933249db427cee87c162881fe5c8b990b6df1d64348ff76c5b577f55d98ae74fc04c63ce0165d70d47e4d58603e07b7bf4c8097a718c8c8b6fe84798
-MISC ChangeLog 968 SHA256 b62daebf5a762c4d01203e3ca6687ec949c6f80c750a3257836a4f68cd181cc2 SHA512 a776b23df2d2eba058e4bc8845822cbf5bfa8fa3aa8ad7fe5b91c89be83e02243488e828a2b37aae3f198a865fa099aecba205aefe96c48741967a5220d7e7ea WHIRLPOOL 266b17d770348b2a6bbb3a2975c87b74002622f67789ead25fc78e171019dab1ab083a047a2e76d389e40433291165c65bd8972c179c237603b30d61447f4a39
+EBUILD LuaBitOp-1.0.2.ebuild 714 SHA256 d13d4a63921e1a349f5963d6202def31b70f6cbc306d4d7bd9fd7bcdcce40e83 SHA512 066ac753014da443c7d116a44736db361939c6951851ddea060202f16534a127daec988a9a67f22192231477892243a81f972ba9e49c7b9710490ed3c90cc3c9 WHIRLPOOL 3b1e15b155dfe2e438d8993e4479ead1f34e62705d0295136c04046b59a476d9e9347b00fd6d2fe07fa248fc360d7ad6d6aee83da499596766de7d4fc2ddbb83
+MISC ChangeLog 1104 SHA256 181aec44489bb15cfd7fac5bbeb180921660d3d616a41a94e6515601d2368299 SHA512 bbe0ebe8d18dbf41e3bec0b7e27ae10bb1026896266776b04ca2d6fb3a1c0d7bf07c0610b82f2dfb9091f93c205a4abcf7c4835938f4e88c723ec8e4e930d02b WHIRLPOOL f632dc4ac92c1475bb31b4c90d510996d95c855be8fddd2eef9bbece0302983c0ffb1bb72cb8edc2137cd0db14d1941528e1298ffb6af57cf5eb375d96afd688
 MISC metadata.xml 370 SHA256 f8e2ec19e7b0b0c11e783af56613d30333fd9843c5513e669c05bfd2e338e7ca SHA512 c056d685fff8edb5fc8cc33c6033891418524302a6ef7b96c782037571c289d8100da4cc729036bb0388cc504524257078c209a87eaf0468bc38a2787aebb5db WHIRLPOOL a3e83f86008ffdf6ee073b067ed6edf3eb8267f64daf58f84aa3fa8b765191953279509aa67b5fd91588e4e0144cee212e540b786500a17fc85c1c3307c896ed
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQEcBAEBCAAGBQJS6sarAAoJEEqz6FtPBkyjU6UIAIfdU3wbIf7VvlWXgAg1gnH6
+5Kmck5hCyjl/VZz00BktXCwX691mvJMY18ZTpNSGrNpjFOUrDP6LCaQhIkbXyIn/
+4gG582SCDOOsN6om+orJF8O8hY440jrRUVDhYgF8ZMQ8+IpE0WVHVQeu/lddYxUN
+ox8ww3yEtLhBHqliuLRtQ0d4q+iDHlJ+o/gN7udFp3QR+HEwRTucXWHuO2zzBJUL
+cBlYJBOGzqz1rlKDvgOpDbyvXI8/IhZ0LdTFUqn4UjcszFyxzko6VfKdklTwE5T1
+VJSI8MwIWtY/n+rxf2JHIEoy6mC59gQ/rPRDx24RJ79XMnBeWdiW/x/xbqIMT1o=
+=/XYT
+-----END PGP SIGNATURE-----
