@@ -4,9 +4,9 @@ DESCRIPTION=groovy little assembler
 EAPI=5
 HOMEPAGE=http://nasm.sourceforge.net/
 IUSE=doc
-KEYWORDS=-* ~amd64 ~x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~x64-macos
+KEYWORDS=~amd64 ~ia64 ~x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~x64-macos
 LICENSE=BSD-2
 SLOT=0
 SRC_URI=http://www.nasm.us/pub/nasm/releasebuilds/2.11/nasm-2.11.tar.xz
 _eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	flag-o-matic	62e05953761097ae84a70d6c7a3e2c9c	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=79dd124fdda8e49a5461f4cfd79ac268
+_md5_=a95c83eb7e2b7e85d9f3e10017956b19
