@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile install
+DEPEND=dev-lang/lua virtual/pkgconfig
+DESCRIPTION=Bit Operations Library for the Lua Programming Language
+EAPI=5
+HOMEPAGE=http://bitop.luajit.org
+KEYWORDS=~amd64 ~x86
+LICENSE=MIT
+RDEPEND=dev-lang/lua
+SLOT=0
+SRC_URI=http://bitop.luajit.org/download/LuaBitOp-1.0.2.tar.gz
+_eclasses_=multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=e58337a0a5efcaf3dec958912793f586
