@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/nasm
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/nasm/ChangeLog,v 1.112 2014/01/17 18:22:21 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/nasm/ChangeLog,v 1.113 2014/01/30 21:47:58 vapier Exp $
+
+  30 Jan 2014; Mike Frysinger <vapier@gentoo.org> nasm-2.11.ebuild:
+  Drop -* as this package can run on any target (it is all C code).  It only
+  generates for x86 systems.
 
 *nasm-2.11 (17 Jan 2014)
 
